[build-system]
requires = ["setuptools >= 68.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "exponential-backoff-ca"
version = "1"
description = "exponential backoff iterator with collision avoidance"
readme = "README.md"
requires-python = ">= 3.9"

[tool.setuptools.packages.find]
include = ["exponential_backoff*"]

#[tool.setuptools]
#packages = ["exponential-backoff-ca"]

[project.urls]
Repository = "https://github.com/macrotex/python-exponential-backoff-ca"

